Bug 94388 - r600_blit.c:281: r600_decompress_depth_textures: Assertion `tex->is_depth && !tex->is_flushing_texture' failed.
Summary: r600_blit.c:281: r600_decompress_depth_textures: Assertion `tex->is_depth && ...
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Gallium/r600 (show other bugs)
Version: git
Hardware: x86 (IA32) Linux (All)
: medium normal
Assignee: Default DRI bug account
QA Contact: Default DRI bug account
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-03-03 12:46 UTC by i.kalvachev
Modified: 2016-03-12 00:59 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
Possible fix based on problem description (1.92 KB, patch)
2016-03-11 02:22 UTC, Nicolai Hähnle
Details | Splinter Review

Description i.kalvachev 2016-03-03 12:46:32 UTC
am\steamapps\common\Crysis\bin32\crysis.exe: r600_blit.c:281: r600_decompress_depth_textures: Assertion `tex->is_depth && !tex->is_flushing_texture' failed.
fixme:faultrep:ReportFault 0x738120 0x0 stub

This is a regression and bisect narrowed it down to:
---
commit 757071ca7cdda12d2974614f9a9d02d5a834f38c
Author: Fredrik Höglund <fredrik@kde.org>
Date:   Fri Jan 8 16:31:14 2016 -0500
    st/mesa: Accelerate PBO uploads
---

Unfortunately I was not able to get backtrace or apitrace (d3d9 or opengl).

For me the bug is triggered when using the wine native d3d9 to opengl wrapper, running the steam version of Crysis 1. The game starts, shows intros and menus, loading screen, but crashes when level is started.
Comment 1 Nicolai Hähnle 2016-03-11 02:22:57 UTC
Created attachment 122214 [details] [review]
Possible fix based on problem description

Thanks for the report. Based on a quick inspection of the code, I noticed a logic bug in compressed depthtex tracking.

Could you please try the attached patch and report whether it fixes the problem? If it *doesn't* fix the problem, it would be helpful to get a backtrace.
Comment 2 Marek Olšák 2016-03-11 09:49:26 UTC
(In reply to Nicolai Hähnle from comment #1)
> Created attachment 122214 [details] [review] [review]
> Possible fix based on problem description
> 
> Thanks for the report. Based on a quick inspection of the code, I noticed a
> logic bug in compressed depthtex tracking.
> 
> Could you please try the attached patch and report whether it fixes the
> problem? If it *doesn't* fix the problem, it would be helpful to get a
> backtrace.

Reviewed-by: Marek Olšák <marek.olsak@amd.com>
Comment 3 i.kalvachev 2016-03-12 00:59:39 UTC
The patch have been committed to Mesa3D git and
I can confirm that the issue is fixed.

To test that, I reverted the e502801d98 commit and the bug returned, so I'm sure this is the patch that fixed it.

Good Work.

(Don't forget to apply it to the 11.2 branch.)


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.